2014-04-24  James Hunt  <james.hunt@ubuntu.com>

	* init/man/init.5:
	  - Clarify default behaviour of 'respawn' stanza.
	  - Add missing 'respawn limit unlimited' details.

2014-03-11  James Hunt  <james.hunt@ubuntu.com>

	* NEWS: Release 1.12.1

2014-03-07  James Hunt  <james.hunt@ubuntu.com>

	* NEWS: Release 1.12

2014-03-06  James Hunt  <james.hunt@ubuntu.com>

	* lib/tests/test_libupstart.c: Revert to looking for 'init'
	  rather than 'test_init'.
	* test/test_util_common.c: _start_upstart(): Don't modify argv[0] to
	  make the tests inits appear as "test_init" since it breaks the re-exec
	  tests (LP: #1288243).
	* util/tests/test_initctl.c: Revert to looking for "init' rather than
	  'test_init'.
	* init/job_process.c: job_process_spawn(): Comments.
	* init/main.c: main(): Enable the debug stanza when booting with
	  '--debug' (switching log-level will not work).
	* init/parse_job.c: stanza_debug(): Conditionally disable the debug
	  stanza.
	* init/control.c:
	  - control_serialise_bus_address(), control_deserialise_bus_address():
	    New functions to handle carrying the control bus address across a
	    re-exec (LP: #1258098).
	* init/state.c:
	  - state_to_string(): Handle control bus address serialisation.
	  - state_from_string(): Handle control bus address
	deserialisation.
	* util/tests/test_initctl.c: test_dbus_connection(): New test:
	  - "ensure Session Init retains D-Bus address across a re-exec"

2014-03-06  James Hunt  <james.hunt@ubuntu.com>

	* lib/tests/test_libupstart.c: test_libupstart(): Another
	  init => test_init fix.

2014-03-05  James Hunt  <james.hunt@ubuntu.com>

	* doc/states.dot: Added missing security state.
	* init/control.c:
	  - control_set_env():
	    - Check permissions before anything else.
	    - Explicit check on @var rather than an assert.
	  - control_unset_env(): Explicit check on @name rather than an assert.
	  - control_get_env(): Explicit check on @name.