@@ -492,7 +492,7 @@ state_from_string (const char *state)
 	/* Again, we cannot error here since older JSON state data did
 	 * not encode ConfSource or ConfFile objects.
 	 */
-	if (json_object_object_get (json, "conf_sources")) {
+	if (json_object_object_get_ex (json, "conf_sources", NULL)) {
 		if (conf_source_deserialise_all (json) < 0) {
 			nih_error ("%s ConfSources", _("Failed to deserialise"));
 			goto out;
@@ -501,9 +501,7 @@ state_from_string (const char *state)
 		nih_warn ("%s", _("No ConfSources present in state data"));
 	}
 
-	json_job_environ = json_object_object_get (json, "job_environment");
-
-	if (json_job_environ) {
+	if (json_object_object_get_ex (json, "job_environment", &json_job_environ)) {
 		if (job_class_deserialise_job_environ (json_job_environ) < 0) {
 			nih_error ("%s global job environment",
 					_("Failed to deserialise"));
@@ -1066,9 +1064,7 @@ state_rlimit_deserialise_all (json_object *json, const void *parent,
 	nih_assert (parent);
 	nih_assert (rlimits);
 
-	json_limits = json_object_object_get (json, "limits");
-
-	if (! json_limits)
+	if (! json_object_object_get_ex (json, "limits", &json_limits))
 		goto error;
 
 	if (! state_check_json_type (json_limits, array))
@@ -1330,8 +1326,7 @@ state_deserialise_resolve_deps (json_object *json)
 			if (! state_check_json_type (json_job, object))
 				goto error;
 
-			json_blocking = json_object_object_get (json_job, "blocking");
-			if (! json_blocking)
+			if (! json_object_object_get_ex (json_job, "blocking", &json_blocking))
 				continue;
 
 			if (! state_get_json_string_var_strict (json_job, "name", NULL, job_name))
@@ -1598,8 +1593,7 @@ state_deserialise_blocked (void *parent, json_object *json,
 	if (blocked_type == (BlockedType)-1)
 		goto error;
 
-	json_blocked_data = json_object_object_get (json, "data");
-	if (! json_blocked_data)
+	if (! json_object_object_get_ex (json, "data", &json_blocked_data))
 		goto error;
 
 	switch (blocked_type) {
@@ -1776,11 +1770,10 @@ state_deserialise_blocking (void *parent, NihList *list, json_object *json)
 	nih_assert (list);
 	nih_assert (json);
 
-	json_blocking = json_object_object_get (json, "blocking");
-
-	/* parent is not blocking anything */
-	if (! json_blocking)
+	if (! json_object_object_get_ex (json, "blocking", &json_blocking)) {
+		/* parent is not blocking anything */
 		return 0;
+	}
 
 	for (int i = 0; i < json_object_array_length (json_blocking); i++) {
 		json_object * json_blocked;
