@@ -1,3 +1,8 @@
+2014-05-07  James Hunt  <james.hunt@ubuntu.com>
+
+	* Convert calls to deprecated json_object_object_get() to
+	  json_object_object_get_ex().
+
 2014-04-24  James Hunt  <james.hunt@ubuntu.com>
 
 	* init/man/init.5:
